[project]
name = "derivatives-pricing-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "quantlib>=1.37",
    "scikit-learn>=1.6.1",
    "yfinance>=0.2.54",
]
